recursion.cons.lessons.recursion.cons.Length.scala.error
length:1: error: ';' expected but ',' found.
def length(l:List[Int]): Int = {1,2,3}
                                 ^