recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {1,2,3}
